--- a/src/styles.css
+++ b/src/styles.css
@@ -61,6 +61,22 @@ main {
     grid-column: 1 / -1;
     border-radius: 5px;
     border: none;
+    width: 150px;
     background-image: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
     color: white;
+    -webkit-filter: brightness(100%);
+}
+
+.form--button:hover {
+    -webkit-filter: brightness(50%);
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+}
+
+.meme--img {
+    max-width: 100%;
+    margin: 1rem;
 }
